--- a/views/table_index.html
+++ b/views/table_index.html
@@ -37,6 +37,8 @@
         <div id="myGrid" style="height: 500px; width: 100%;"  class="ag-theme-balham"></div>
     <!--<</div> --!>
         <button onclick="getSelectedRows()">Get Selected Rows</button>
+        <br>
+        <b>Total number of rows: {*ROW_NUMBER*}</b>
             <script>
     const getSelectedRows = () => {
         const selectedNodes = gridOptions.api.getSelectedNodes()
