Running on server

--- a/views/query_landing.html
+++ b/views/query_landing.html
@@ -28,7 +28,7 @@
 <body>
     <b>Search by ASV & Sample</b>
     <div id="single_value_form" class="qur_forms">
-        <form action="/single_value" id="sv_form" 
+        <form action="/testingsingle_value" id="sv_form" 
             onsubmit="return validateForm(1)"  method="get">
             ASV: <input type="text" name="ASV_name">
             <p></p>
@@ -42,7 +42,7 @@
     <br>
     <b>Search by ASV</b>
     <div id="sample_values_form" class="qur_forms">
-        <form action="/sample_values" id="asv2samples" method="get">
+        <form action="/testingsample_values" id="asv2samples" method="get">
             ASV: <input type="text" name="ASV_name">
             <p></p>
             <input type="submit" maxlength="64">
@@ -52,7 +52,7 @@
     <br>
     <b>Search by Sample</b>
     <div id="asv_values_form" class="qur_forms">
-        <form action="/asv_values" id="samples2asv" method="get">
+        <form action="/testingasv_values" id="samples2asv" method="get">
             Sample: <input type="text" name="Sample_name">
             <p></p>
             <input type="submit" maxlength="64">
@@ -62,7 +62,7 @@
     <br>
     <b>Search by Taxonomy</b>
     <div id="srch_by_taxonomy" style="height: 250px;" class="qur_forms">
-        <form action="/srch_by_taxonomy" id="srch_by_taxonomy" method="get">
+        <form action="/testingsrch_by_taxonomy" id="srch_by_taxonomy" method="get">
             Domain: <input type="text" name="domain">
             <p></p>
             Phylum: <input type="text" name="phylum">
